--- a/src/main/resources/templates/seznam.html
+++ b/src/main/resources/templates/seznam.html
@@ -91,26 +91,23 @@
     <div class="container">
         <h2 class="text-center mb-5" id="nadpis">Zasázené rostliny</h2>
         <div class="row">
-
-                    <div class="card m-3 rostlina" style="width: 25rem;" th:each="rostlina : ${seznam}">
-                        <img src="images/levandule.webp" class="card-img-top img-fluid rounded pt-3" alt="levandule">
-                        <div class="card-body">
-                            <h5 class="card-title" th:text="${rostlina.latinskyNazev}">Latinský název</h5>
-                            <h6 class="card-text" th:text="${rostlina.ceskyNazev}">Český název</h6>
-                            <p class="card-text" th:text="${rostlina.popis}">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <a th:href="@{/{id}(id=${rostlina.id})}"href="#" class="btn btn-secondary">Detail</a>
-                        </div>
-                    </div>
-
-
+            <div class="card m-3 rostlina" style="width: 25rem;" th:each="rostlina : ${seznam}">
+                <img src="images/levandule.webp" class="card-img-top img-fluid rounded pt-3" alt="levandule">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${rostlina.latinskyNazev}">Latinský název</h5>
+                    <h6 class="card-text" th:text="${rostlina.ceskyNazev}">Český název</h6>
+                    <p class="card-text" th:text="${rostlina.popis}">Some quick example text to build on the card title
+                        and make up the bulk of the card's content.</p>
+                    <a th:href="@{/{id}(id=${rostlina.id})}" href="#" class="btn btn-secondary">Detail</a>
+                </div>
+            </div>
         </div>
-        <div class="d-grid gap-1 col-6 mx-auto mt-5">
-            <a href="/formular">
-            <button class="btn btn-secondary" type="button">Přidat další rostlinu</button>
-            </a>
+        <div class="row">
+            <div class="d-grid gap-1 col-2 mx-auto">
+                <a href="/formular">
+                    <button class="btn btn-secondary" type="button">Přidat další rostlinu</button>
+                </a>
+            </div>
         </div>
     </div>
 </section>
